--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -36,6 +36,7 @@
     <string name="menu_update">Обновить</string>
     <string name="menu_settings">Настройки</string>
     <string name="menu_locations">Города</string>
+    <string name="menu_hourly">Почасовой</string>
     <string name="btn_add_location">Добавить город</string>
     <string name="btn_delete_location">Удалить город</string>
     <string name="location_list">Список городов</string>
