--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,8 +35,10 @@
     <string name="menu_update">Update</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_locations">Locations</string>
+    <string name="menu_hourly">Hourly</string>
     <string name="btn_add_location">Add Location</string>
     <string name="btn_delete_location">Delete Location</string>
+    <string name="location_gps">Current location</string>
     <string name="location_list">Locations</string>
     <string name="location_search">Location search</string>
     <string name="location_edit">Enter city name</string>
