--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_locations">Locations</string>
     <string name="menu_hourly">Hourly</string>
+    <string name="menu_trend">Trend</string>
     <string name="btn_add_location">Add Location</string>
     <string name="btn_delete_location">Delete Location</string>
     <string name="location_gps">Current location</string>
