--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -49,6 +49,12 @@ Naprawdę to doceniam!"</string>
     <string name="animation_preview">Podgląd animacji</string>
     <string name="menu_update">Odśwież</string>
     <string name="menu_settings">Ustawienia</string>
+    <string name="menu_locations">Lokalizacje</string>
+    <string name="menu_hourly">Godzinowa</string>
+    <string name="menu_trend">Trendy</string>
+    <string name="btn_add_location">Dodaj lokalizację</string>
+    <string name="btn_delete_location">Usuń lokalizację</string>
+    <string name="location_gps">Aktualna lokalizacja</string>
     <string name="location_list">Lokalizacje</string>
     <string name="location_search">Wyszukaj lokalizacje</string>
     <string name="location_edit">Wpisz nazwę miasta</string>
@@ -142,6 +148,7 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_show_info_title">Pokaż informacje</string>
     <string name="settings_show_info_summary">Pokaż/ukryj elementy widżetu</string>
     <string name="settings_notification_type">Typ powiadomienia</string>
+    <string name="settings_animation_type">Typ animacji</string>
     <string name="quiet_hours_title">Ciche godziny</string>
     <string name="quiet_hours_enabled">Włącz ciche godziny</string>
     <string name="quiet_hours_enabled_on">Ciche godziny włączone</string>
@@ -172,7 +179,7 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Odznacz dla domyślnego tła</string>
     <string name="settings_widgets_widget4x1_white_icon_title">Biała ikona pogody</string>
     <string name="settings_widgets_widget4x1_white_icon_sum">Odznacz dla czarnej ikony pogody</string>
-    <string name="settings_widgets_widget4x1_data_title">Extended data</string>
+    <string name="settings_widgets_widget4x1_data_title">Rozszerzona pogoda</string>
     <string name="dialog_color_picker">Wybieranie kolorów</string>
     <string name="press_color_to_apply">Naciśnij kolor aby zastosować</string>
     <string name="text_color_title">Kolor tekstu</string>
