--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -1,14 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="donations__button_close">Chiudi</string>
+    <string name="donations__flattr">Flattr</string>
+    <string name="donations__description">"Hai trovato questo programma utile ?
+ Supporta il suo sviluppo con una donazione!"</string>
+    <string name="donations__flattr_description">Flattr ricava il 10% come canone mensile!</string>
+    <string name="donations__google_android_market">Google Play Store</string>
+    <string name="donations__google_android_market_not_supported_title">Donazioni In-App non supportate</string>
+    <string name="donations__google_android_market_not_supported">Donazioni In-App non supportate. Google Play Store è installato correttamente ?</string>
+    <string name="donations__google_android_market_description">Google ricava il 30% di ogni donazione!</string>
+    <string name="donations__google_android_market_donate_button">Dona Ora!</string>
+    <string name="donations__google_android_market_text">Quanto ?</string>
+    <string name="donations__paypal">PayPal</string>
+    <string name="donations__paypal_description">Puoi scegliere quanto donare dopo aver premuto il pulsante!</string>
+    <string name="donations__thanks_dialog_title">Grazie!</string>
+    <string name="donations__thanks_dialog">"Grazie per la donazione!
+Lo apprezzo molto!"</string>
     <string name="app_name">Weather BZ</string>
+    <string name="changelog">Novità</string>
     <string name="close">Chiudi</string>
+    <string name="donate">Donazione</string>
     <string name="settings_check_updates_title">Controlla Aggiornamenti</string>
     <string name="settings_check_updates_summary">"Controlla aggiornamenti all'avvio"</string>
     <string name="settings_category_app_update">Application update</string>
     <string name="settings_category_forecast_update">Forecast update</string>
     <string name="widget_name_medium">Weather BZ 4x1</string>
-    <string name="widget_name_medium_ext">Weather BZ 4x1</string> 
+    <string name="widget_name_medium_ext">Weather BZ 4x1</string>
     <string name="widget_name_large">Weather BZ 4x2</string>
+    <string name="widget_name_large_v5">Weather BZ 4x2</string>
     <string name="about_version">Versione</string>
     <string name="about_author">Autore</string>
     <string name="about_provider">Provider Meteo</string>
@@ -31,6 +50,12 @@
     <string name="animation_preview">Anteprima</string>
     <string name="menu_update">Aggiorna</string>
     <string name="menu_settings">Impostazioni</string>
+    <string name="menu_locations">Localita'</string>
+    <string name="menu_hourly">Ogni Ora</string>
+    <string name="menu_trend">Andamento</string>
+    <string name="btn_add_location">Aggiungi Localita'</string>
+    <string name="btn_delete_location">Cancella Localita'</string>
+    <string name="location_gps">Posizione attuale</string>
     <string name="location_list">Località</string>
     <string name="location_search">Cerca località</string>
     <string name="location_edit">Inserisci la località</string>
@@ -41,6 +66,8 @@
     <string name="weather_feel">"Percepito: "</string>
     <string name="weather_pressure">"Pressione: "</string>
     <string name="weather_visibility">"Visibilità: "</string>
+    <string name="weather_forecast_empty">--</string>
+    <string name="weather_cond_overcast">Nuvoloso</string>
     <string name="settings_category_update">Aggiornamento</string>
     <string name="settings_category_update_sum">Regola le impostazioni degli aggiornamenti</string>
     <string name="settings_category_animation">Animazioni</string>
@@ -77,6 +104,16 @@
     <string name="settings_update_roaming_summary">Aggiorna automaticamente i dati meteo quando si è in roaming.</string>
     <string name="settings_category_appearance">Display</string>
     <string name="settings_category_appearance_sum">Regola le impostazioni visive (mostra/nascondi dati, linguaggio etc.)</string>
+    <string name="settings_category_miui">ROMs MIUI</string>
+    <string name="settings_category_miui_sum">Solo per gli utenti che utilizzano una ROM MIUI</string>
+    <string name="settings_miui_support_summary">Abilita il supporto ai widget nativi di MIUI</string>
+    <string name="settings_miui_support_title">Supporto ai widgets MIUI</string>
+    <string name="settings_miui_v5_summary">Abilita se hai una ROM MIUI v5</string>
+    <string name="settings_miui_v5_title">ROM MIUI v5</string>
+    <string name="clear_miui_data">Cancella i dati del MIUI weather</string>
+    <string name="clear_miui_data_summary">Verranno cancellati e azzerati i dati del MIUI Weather</string>
+    <string name="clear_miui_data_dialog">Pulisci MIUI Weather</string>
+    <string name="clear_miui_data_dialog_text">Database MIUI Weather Pulito!</string>
     <string name="settings_show_temp_symbol_title">Simbolo della temperatura</string>
     <string name="settings_show_temp_symbol_summary">Mostra o nascondi il simbolo della temperatura (C per Celsius)</string>
     <string name="settings_show_weather_icons_title">Icone meteo</string>
@@ -110,6 +147,7 @@
     <string name="settings_show_info_title">Mostra dettagli</string>
     <string name="settings_show_info_summary">"Mostra o nascondi elementi nell'interfaccia"</string>
     <string name="settings_notification_type">Notifica Grafica</string>
+    <string name="settings_animation_type">Tipo di Animazione</string>
     <string name="quiet_hours_title">ORE QUIETI</string>
     <string name="quiet_hours_enabled">Attiva le ore quieti</string>
     <string name="quiet_hours_enabled_on">Ore quieti abilitate</string>
@@ -121,12 +159,21 @@
     <string name="dlg_set_as_home">Imposta come \"Città Base\"</string>
     <string name="wind_n">N</string>
     <string name="wind_ne">NE</string>
+    <string name="wind_nne">N-NE</string>
     <string name="wind_nw">NO</string>
+    <string name="wind_nnw">N-NO</string>
     <string name="wind_s">S</string>
     <string name="wind_se">SE</string>
+    <string name="wind_sse">S-SE</string>
     <string name="wind_sw">SO</string>
+    <string name="wind_ssw">S-SO</string>
     <string name="wind_e">E</string>
+    <string name="wind_ene">E-NE</string>
+    <string name="wind_ese">E-SE</string>
     <string name="wind_w">O</string>
+    <string name="wind_wnw">O-NO</string>
+    <string name="wind_wsw">O-SO</string>
+    <string name="wind_variable">VariabIle</string>
     <string name="settings_widgets_widget4x1_transparent_title">Sfondo transparente</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Sfondo default se deselezionato</string>
     <string name="settings_widgets_widget4x1_white_icon_title">Icona del meteo Bianca</string>
@@ -136,5 +183,18 @@
     <string name="press_color_to_apply">Premi sul colore per applicarlo</string>
     <string name="text_color_title">Colore del Testo</string>
     <string name="main_screen_text_color_summary">Colore del testo sulla pagina principale</string>
-    <string name="widget_text_color_summary">"Colore del testo sui widget"</string>
+    <string name="widget_text_color_summary">Colore del testo sui widget</string>
+    <string name="pressure_units">Unita' Pressione</string>
+    <string name="pressure_units_mb">" mbar"</string>
+    <string name="pressure_units_mmhg">" mmHg"</string>
+    <string name="wind_speed_units">Unita' Velocita' Vento</string>
+    <string name="wind_speed_units_mps">" m/s"</string>
+    <string name="wind_speed_units_kmph">" km/h"</string>
+    <string name="wind_speed_units_mph">" mph"</string>
+    <string name="visibility_units">Unita' Visibilita'</string>
+    <string name="visibility_units_m">" m"</string>
+    <string name="visibility_units_mi">" miglia"</string>
+    <string name="temperature_units">Unita' Temperatura</string>
+    <string name="temperature_units_c">Celsius</string>
+    <string name="temperature_units_f">Fahrenheit</string>
 </resources>
