--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -45,14 +45,17 @@
   <string name="fetching_location">Lokaliserer …</string>
   <string name="just_now">Lige nu</string>
   <string name="location_edit">Angiv bynavn</string>
+  <string name="location_gps">Aktuel placering</string>
   <string name="location_list">Steder</string>
   <string name="location_search">Søg efter placering</string>
   <string name="main_screen_text_color_summary">Tekstfarven på vejr info</string>
+  <string name="menu_hourly">Time</string>
   <string name="menu_locations">Steder</string>
   <string name="menu_settings">Indstillinger</string>
-  <string name="menu_update">opdatering</string>
+  <string name="menu_trend">Trend</string>
+  <string name="menu_update">Opdater</string>
   <string name="network_error">Kunne ikke forbinde til serveren</string>
-  <string name="no_provider">Lokalisering mislykkedes, indstil placering manuelt</string>
+  <string name="no_provider">Lokalisering mislykkedes\nIndstil placering manuelt</string>
   <string name="press_color_to_apply">Tryk på farve for at anvende</string>
   <string name="pressure_units">Tryk enhed</string>
   <string name="pressure_units_mb">" mb"</string>
@@ -144,15 +147,15 @@
   <string name="visibility_units_m">" m"</string>
   <string name="visibility_units_mi">" mil"</string>
   <string name="weather_cond_overcast">Overskyet</string>
-  <string name="weather_feel">Realfeel:</string>
+  <string name="weather_feel">"RealFeel: "</string>
   <string name="weather_forecast_empty">--</string>
-  <string name="weather_humidity">Fugtighed:</string>
+  <string name="weather_humidity">"Fugtighed: "</string>
   <string name="weather_no_city">Ingen by</string>
   <string name="weather_no_conditions_data">Ingen vejrdata</string>
   <string name="weather_no_temp_data">-°</string>
-  <string name="weather_pressure">Tryk:</string>
-  <string name="weather_visibility">Sigtbarhed:</string>
-  <string name="weather_wind">Vind:</string>
+  <string name="weather_pressure">"Tryk: "</string>
+  <string name="weather_visibility">"Sigtbarhed: "</string>
+  <string name="weather_wind">"Vind: "</string>
   <string name="widget_name_large">Vejr BZ 4x2</string>
   <string name="widget_name_large_v5">Vejr BZ 4x2</string>
   <string name="widget_name_medium">Vejr BZ 4x1</string>
