--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<string name="donations__button_close">Fermer</string>
+	<string name="donations__flattr">Flattr</string>
+	<string name="donations__description">"Vous trouvez cette application utile ?
+Supporter son développement avec Flattr ou en envoyant des dons en utilisant l'Android Market !"</string>
+	<string name="donations__flattr_description">Flattr prend 10% de frais mensuels !</string>
+	<string name="donations__google_android_market">Google Play Store</string>
+	<string name="donations__google_android_market_not_supported_title">Donations In-App non-supportées</string>
+	<string name="donations__google_android_market_not_supported">"Donations In-App non-supportée. L'application Google Play Store est-elle correctement installée ?"</string>
+	<string name="donations__google_android_market_description">Google prend 30% sur chaque don !</string>
+	<string name="donations__google_android_market_donate_button">Faire un don</string>
+	<string name="donations__google_android_market_text">Combien ?</string>
+	<string name="donations__paypal">PayPal</string>
+	<string name="donations__paypal_description">Vous pouvez faire un don du montant désiré en cliquant sur ce bouton !</string>
+	<string name="donations__thanks_dialog_title">Merci !</string>
+	<string name="donations__thanks_dialog">Merci beaucoup pour votre don !</string>
 	<string name="app_name">Météo</string>
-	<string name="changelog">Changelog</string>
+	<string name="changelog">Dernières mises à jour</string>
 	<string name="close">Fermer</string>
 	<string name="donate">Faire un don</string>
 	<string name="settings_check_updates_title">Mises à jour automatiques</string>
 	<string name="settings_check_updates_summary">"Vérifier les mises à jour au démarrage de l'application"</string>
 	<string name="settings_category_app_update">"Mise à jour de l'application"</string>
 	<string name="settings_category_forecast_update">Mise à jour des prévisions</string>
-	<string name="widget_name_medium">Weather BZ 4x1</string>
-	<string name="widget_name_medium_ext">Weather BZ 4x1</string>
-	<string name="widget_name_large">Weather BZ 4x2</string>
-	<string name="widget_name_large_v5">Weather BZ 4x2</string>
+	<string name="widget_name_medium">Météo 4x1</string>
+	<string name="widget_name_medium_ext">Météo 4x1</string>
+	<string name="widget_name_large">Météo 4x2</string>
+	<string name="widget_name_large_v5">Météo 4x2</string>
 	<string name="about_version">Version</string>
 	<string name="about_author">Auteur</string>
-	<string name="about_provider">Fournisseur des données météorologiques</string>
+	<string name="about_provider">Source des données météorologiques</string>
 	<string name="about_copyright">Copyright</string>
 	<string name="about_sunny">Ciel dégagé</string>
 	<string name="about_sunny_night">Nuit dégagée</string>
-	<string name="about_cloudy">En partie nuageux</string>
+	<string name="about_cloudy">Ciel couvert</string>
 	<string name="about_cloudy_night">Nuit nuageuse</string>
 	<string name="about_overcast">Nuageux</string>
-	<string name="about_dust">Poussière</string>
+	<string name="about_dust">Tempête de poussière</string>
 	<string name="about_fog">Brouillard</string>
 	<string name="about_hailstone">Grêle</string>
 	<string name="about_light_rain">Légères averses</string>
@@ -31,6 +46,9 @@
 	<string name="about_t_storms">Orages</string>
 	<string name="about_sleet">Grésil</string>
 	<string name="about_snow">Neige</string>
+	<string name="about_light_snow">Faibles neiges</string>
+	<string name="about_heavy_snow">Fortes neiges</string>
+	<string name="about_blizzard">Tempête de neige</string>
 	<string name="animation_preview">Prévisualisation des animations</string>
 	<string name="menu_update">Mise à jour</string>
 	<string name="menu_settings">Paramètres</string>
@@ -44,7 +62,7 @@
 	<string name="location_search">"Recherche d'une ville"</string>
 	<string name="location_edit">Nom de la ville</string>
 	<string name="weather_no_city">Aucune ville</string>
-	<string name="weather_no_conditions_data">Aucune donnée météorologique</string>
+	<string name="weather_no_conditions_data">Aucune donnée météo</string>
 	<string name="weather_no_temp_data">-°</string>
 	<string name="weather_humidity">"Humidité : "</string>
 	<string name="weather_wind">"Vent : "</string>
@@ -56,21 +74,22 @@
 	<string name="settings_category_update">Mises à jour</string>
 	<string name="settings_category_update_sum">Paramétrage des mises à jour</string>
 	<string name="settings_category_animation">Animations</string>
-	<string name="settings_category_animation_sum">Paramétrage des animations météorologiques</string>
+	<string name="settings_category_animation_sum">Choix des animations</string>
 	<string name="settings_update_interval_title">Fréquence de mise à jour</string>
 	<string name="settings_update_autoupdate_title">Mise à jour automatique</string>
 	<string name="settings_update_autoupdate_summary">Mise à jour automatique des prévisions météorologiques</string>
 	<string name="settings_animation_show_title">Afficher les animations</string>
-	<string name="settings_animation_show_summary">Jouer en arrière-plan une animation vidéo correspondant aux conditions météorologiques actuelles</string>
+	<string name="settings_animation_show_summary">Afficher en arrière-plan une animation correspondant à la météo actuelle</string>
 	<string name="settings_animation_download_title">Télécharger des animations</string>
-	<string name="settings_animation_download_summary">Télécharger une animation vidéo correspondant aux conditions météorologiques actuelles (si aucun fichier vidéo en local ne correspond)</string>
+	<string name="settings_animation_download_summary">Télécharger une animation correspondant à la météo actuelle (si aucun fichier vidéo en local ne correspond)</string>
 	<string name="settings_about_title">A propos de</string>
 	<string name="settings_about_summary">"Informations sur l'application"</string>
-	<string name="no_provider">La géolocalisation a échoué\nVeuillez entrer manuellement votre position</string>
+	<string name="no_provider">La géolocalisation a échoué
+Veuillez entrer manuellement votre position</string>
 	<string name="network_error">Impossible de se connecter au serveur</string>
-	<string name="updating">Mise à jour\u2026</string>
+	<string name="updating">Mise à jour…</string>
 	<string name="just_now">"A l'instant"</string>
-	<string name="fetching_location">Géolocalisation en cours\u2026</string>
+	<string name="fetching_location">Géolocalisation…</string>
 	<string name="conf_add_widget">Ajouter un widget</string>
 	<string name="conf_light_skin">Thème clair (light)</string>
 	<string name="conf_dark_skin">Thème foncé (dark)</string>
@@ -81,40 +100,38 @@
 	<string name="settings_category_notification">Notifications</string>
 	<string name="settings_category_notification_sum">Paramétrage des notifications météorologiques</string>
 	<string name="settings_category_network">Accès internet</string>
-	<string name="settings_notification_title">Affichage</string>
-	<string name="settings_notification_summary">Afficher les conditions météorologiques actuelles dans la zone de notifications</string>
+	<string name="settings_notification_title">Affichage des notifications</string>
+	<string name="settings_notification_summary">Afficher la météo actuelle dans la zone de notifications</string>
 	<string name="settings_update_wifi_only_title">Mise à jour uniquement en Wi-Fi</string>
 	<string name="settings_update_wifi_only_summary">Mise à jour automatique des prévisions météorologiques seulement si une connexion Wi-Fi est active</string>
 	<string name="settings_update_roaming_title">Mise à jour sur le forfait data</string>
-	<string name="settings_update_roaming_summary">Mise à jour automatique des prévisions météorologiques autorisée sur le forfait data (ATTENTION : cela peut engendrer des surfacturations de la part de votre opérateur)</string>
+	<string name="settings_update_roaming_summary">Mise à jour automatique des prévisions météorologiques autorisée sur le forfait data (attention : cela peut engendrer des surfacturations de la part de votre opérateur)</string>
 	<string name="settings_category_appearance">Apparence</string>
-	<string name="settings_category_appearance_sum">"Paramétrage de l'apparence (unités, couleur de texte, etc.)"</string>
+	<string name="settings_category_appearance_sum">Choix des unités et de la couleur du texte</string>
 	<string name="settings_category_miui">ROMs MIUI</string>
-	<string name="settings_category_miui_sum">Paramétrage pour support des ROMs MIUI</string>
+	<string name="settings_category_miui_sum">Options dédiées aux ROMs MIUI</string>
 	<string name="settings_miui_support_summary">Prise en charge des widgets natifs de MIUI</string>
 	<string name="settings_miui_support_title">Support des widgets MIUI</string>
 	<string name="settings_miui_v5_summary">Désactiver si le système tourne sous la ROM MIUI v5</string>
 	<string name="settings_miui_v5_title">ROM MIUI v5</string>
-	<string name="clear_miui_data">Purger les données météos MIUI</string>
-	<string name="clear_miui_data_summary">"Effacer les données météorologiques de l'application météo native de MIUI"</string>
-	<string name="clear_miui_data_dialog">"Purger l'application météo"</string>
-	<string name="clear_miui_data_dialog_text">"Les données météorologiques de l'application météo native de MIUI ont été effacées avec succès !"</string>
-	<string name="settings_show_temp_symbol_title">Affichage du symbole de température</string>
-	<string name="settings_show_temp_symbol_summary">Afficher ou masquer le symbole de température (C pour Celsius)</string>
-	<string name="settings_show_weather_icons_title">Affichage des icônes météos</string>
+	<string name="clear_miui_data">Nettoyer le cache météo de MIUI</string>
+	<string name="clear_miui_data_summary">"Effacer les données de l'application météo native de MIUI"</string>
+	<string name="clear_miui_data_dialog">Nettoyage du cache météo de MIUI</string>
+	<string name="clear_miui_data_dialog_text">"Les données de l'application météo native de MIUI ont été effacées avec succès !"</string>
+	<string name="settings_show_weather_icons_title">Affichage des icônes de météo</string>
 	<string name="settings_show_weather_icons_summary">Afficher des icônes dans les prévisions météorologiques à 3 jours</string>
 	<string name="settings_notification_text_color_summary">"Couleur du texte et de l'icône"</string>
-	<string name="settings_notification_color_title">"Couleur du symbole de la barre d'état"</string>
+	<string name="settings_notification_color_title">"Couleur du symbole dans la barre d'état"</string>
 	<string name="settings_category_widgets">Widgets</string>
-	<string name="settings_category_widgets_sum">Apparence des widgets et actions des clicks</string>
-	<string name="settings_widgets_click_clock_title">"Click sur l'horloge"</string>
+	<string name="settings_category_widgets_sum">Apparence des widgets et actions sur clics</string>
+	<string name="settings_widgets_click_clock_title">"Clic sur l'horloge"</string>
 	<string name="settings_widgets_click_clock_summary">"Application à lancer en cliquant sur l'horloge du widget"</string>
-	<string name="settings_widgets_click_weather_title">Click sur la météo</string>
+	<string name="settings_widgets_click_weather_title">Clic sur la météo</string>
 	<string name="settings_widgets_click_weather_summary">Application à lancer en cliquant sur la zone météo du widget</string>
 	<string name="settings_widgets_widget4x2">Widget 4x2</string>
 	<string name="settings_widgets_widget4x2_desc_font_title">Météo (description)</string>
 	<string name="settings_widgets_widget4x2_desc_font_summary">Valeur par défaut 22sp</string>
-	<string name="settings_widgets_widget4x2_clock_font_title">Horloge</string>
+	<string name="settings_widgets_widget4x2_clock_font_title">Heure</string>
 	<string name="settings_widgets_widget4x2_clock_font_summary">Valeur par défaut 50sp</string>
 	<string name="settings_widgets_widget4x2_date_font_title">Date</string>
 	<string name="settings_widgets_widget4x2_date_font_summary">Valeur par défaut 14sp</string>
@@ -126,22 +143,23 @@
 	<string name="settings_widgets_widget4x2_feel_font_summary">Valeur par défaut 14sp</string>
 	<string name="settings_widgets_widget4x2_wind_font_title">Vent</string>
 	<string name="settings_widgets_widget4x2_wind_font_summary">Valeur par défaut 14sp</string>
-	<string name="settings_widgets_widget4x2_custom_font_title">Taille de police personnalisée</string>
-	<string name="settings_widgets_widget4x2_custom_font_summary">Taille de police personnalisée pour le widget</string>
+	<string name="settings_widgets_widget4x2_custom_font_title">Polices</string>
+	<string name="settings_widgets_widget4x2_custom_font_summary">Activer pour personnaliser les tailles des polices du widget</string>
 	<string name="settings_widgets_widget4x1">Widget 4x1</string>
-	<string name="settings_show_info_title">Affichage des informations</string>
-	<string name="settings_show_info_summary">Sélection des informations à afficher ou masquer</string>
+	<string name="settings_show_info_title">Informations à afficher</string>
+	<string name="settings_show_info_summary">Sélection des informations à afficher et de celles à masquer</string>
 	<string name="settings_notification_type">Type de notification</string>
 	<string name="settings_animation_type">"Type d'animation"</string>
 	<string name="quiet_hours_title">Plages horaires de mise à jour</string>
 	<string name="quiet_hours_enabled">Désactiver les mises à jour</string>
 	<string name="quiet_hours_enabled_on">Mises à jour suspendues sur la plage horaire définie ci-dessous</string>
-	<string name="quiet_hours_enabled_off">Mises à jour permanentes</string>
+	<string name="quiet_hours_enabled_off">"Mises à jour à toute heure de la journée
+(à condition d'avoir un accès internet)"</string>
 	<string name="start_time_title">Début</string>
 	<string name="end_time_title">Fin</string>
 	<string name="dlg_select_action">Choisir une action</string>
 	<string name="dlg_go_to_forecast">Accéder aux prévisions</string>
-	<string name="dlg_set_as_home">Définir en tant que \"ville principale\"</string>
+	<string name="dlg_set_as_home">Définir en tant que ville principale</string>
 	<string name="wind_n">N</string>
 	<string name="wind_ne">NE</string>
 	<string name="wind_nne">N-NE</string>
@@ -161,8 +179,8 @@
 	<string name="wind_variable">Variable</string>
 	<string name="settings_widgets_widget4x1_transparent_title">Fond transparent</string>
 	<string name="settings_widgets_widget4x1_transparent_sum">Arrière plan par défaut si option désactivée</string>
-	<string name="settings_widgets_widget4x1_white_icon_title">Icône météo blanche</string>
-	<string name="settings_widgets_widget4x1_white_icon_sum">Icône météo noire si option désactivée</string>
+	<string name="settings_widgets_widget4x1_white_icon_title">Icône de météo blanche</string>
+	<string name="settings_widgets_widget4x1_white_icon_sum">Icône de météo noire si option désactivée</string>
 	<string name="settings_widgets_widget4x1_data_title">Prévisions météorologiques</string>
 	<string name="dialog_color_picker">Choix de la couleur</string>
 	<string name="press_color_to_apply">"Appuyer sur la couleur pour l'appliquer"</string>
