--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -57,7 +57,7 @@
     <string name="settings_category_update">Настройки обновления</string>
     <string name="settings_category_update_sum">Настройки автообновления и времени обновления прогноза</string>
     <string name="settings_category_animation">Настройки анимации</string>
-    <string name="settings_category_animation_sum">Настройки отображения анимации и загрузки видео анимации</string>
+    <string name="settings_category_animation_sum">Отображение анимации, выбор ее типа</string>
     <string name="settings_update_interval_title">Интервал обновления</string>
     <string name="settings_update_autoupdate_title">Автообновление</string>
     <string name="settings_update_autoupdate_summary">Автоматическое обновление прогноза погоды</string>
@@ -81,7 +81,7 @@
     <string name="conf_no_background">Без фона (прозрачный)</string>
     <string name="settings_category_network">Настройки сети</string>
     <string name="settings_category_notification">Настройки уведомлений</string>
-    <string name="settings_category_notification_sum">Настройка уведомлений о состоянии погоды (в статусной строке и т.д.)</string>
+    <string name="settings_category_notification_sum">Уведомления о состоянии погоды в статусной строке</string>
     <string name="settings_notification_title">Уведомление о погоде</string>
     <string name="settings_notification_summary">Показывать текущие показатели прогноза погоды в области уведомлений</string>
     <string name="settings_update_wifi_only_title">Обновлять только по Wi-Fi</string>
@@ -89,7 +89,7 @@
     <string name="settings_update_roaming_title">Обновлять в роуминге</string>
     <string name="settings_update_roaming_summary">Автоматически обновлять прогноз погоды в роуминге. Это может увеличить ваши расходы по оплате счетов сотовой связи</string>
     <string name="settings_category_appearance">Внешний вид</string>
-    <string name="settings_category_appearance_sum">Настройки единиц измерения, цвета текста и т.д.</string>
+    <string name="settings_category_appearance_sum">Единицы измерения, цвет текста и т.д.</string>
     <string name="settings_category_miui">Прошивки MIUI</string>
     <string name="settings_category_miui_sum">Настройки для прошивок MIUI, очистка погодных данных MIUI</string>
     <string name="settings_miui_support_summary">Включает поддержку встроенных виджетов MIUI</string>
@@ -100,8 +100,7 @@
     <string name="clear_miui_data_summary">Очищает базу данных WeatherProvider MIUI</string>
     <string name="clear_miui_data_dialog">Очистка базы MIUI</string>
     <string name="clear_miui_data_dialog_text">Очистка базы данных погоды MIUI завершена!</string>
-    <string name="settings_show_temp_symbol_title">Символ температуры</string>
-    <string name="settings_show_temp_symbol_summary">Показывать символ температуры (буква C для градусов Цельсия)</string>
+    <string name="settings_time_format_12h">12-часовой формат</string>
     <string name="settings_show_weather_icons_title">Иконки погоды</string>
     <string name="settings_show_weather_icons_summary">Показывать иконки погоды (вместо текстового описания состояния погоды) в прогнозе на 3 дня</string>
     <string name="settings_notification_text_color_summary">Цвет текста и иконки уведомления</string> 
